--- a/projects/Slider/style.css
+++ b/projects/Slider/style.css
@@ -9,6 +9,12 @@ body{
 	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 18%,rgba(135,224,253,1) 100%); /* IE10+ */
 	background: linear-gradient(to bottom,  rgba(255,255,255,1) 18%,rgba(135,224,253,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#87e0fd',GradientType=0 ); /* IE6-8 */
+	background-repeat: repeat-y;
+}
+
+.container{
+	width: 600px;
+	margin: 100px auto 100px;
 }
 
 .container h1{
