--- a/projects/Slider/style.css
+++ b/projects/Slider/style.css
@@ -10,6 +10,7 @@ body{
 	background: linear-gradient(to bottom,  rgba(255,255,255,1) 18%,rgba(135,224,253,1) 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#87e0fd',GradientType=0 ); /* IE6-8 */
 	background-repeat: repeat-y;
+	width: 100%;
 }
 
 .container{
