important flag set next to small elements

--- a/projects/bennie/print.css
+++ b/projects/bennie/print.css
@@ -502,7 +502,7 @@ select {
   display: none !important; }*/
 
 .hide-for-small{
-  display: visible;
+  display: block !important;
 }
 
 /* Specific visilbity for tables */
