Profile pic added and images cleaned up

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -450,3 +450,8 @@ footer .footer-below {
     display: none;
     opacity: 0;
 }
+
+.profile-pic {
+    max-width: 300px;
+    border-radius: 150px;
+}
