--- a/personal-test-projects/Connect2Rep/css/style-desktop.css
+++ b/personal-test-projects/Connect2Rep/css/style-desktop.css
@@ -1,9 +1,3 @@
-/*
-	TXT by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 /*********************************************************************************/
 /* Basic                                                                         */
 /*********************************************************************************/
@@ -85,7 +79,7 @@
 			
 				.box.highlight .special
 				{
-					margin: 0 0 4em 0;
+					margin: 0 0 2em 0;
 				}
 
 				.box.highlight h2
@@ -218,7 +212,7 @@
 
 	#banner-wrapper
 	{
-		padding: 11em 0;
+		padding: 3em 0 5em;
 	}
 	
 	#main-wrapper
@@ -308,6 +302,13 @@
 			position: relative;
 			z-index: 1001;
 		}
+
+		#nav ul.secondary
+		{
+			position: absolute;
+			top: 0;
+			right: 0;
+		}
 	
 		#nav li
 		{
@@ -320,6 +321,16 @@
 			-o-transition: top .15s ease-in-out;
 			-ms-transition: top .15s ease-in-out;
 			transition: top .15s ease-in-out;
+		}
+
+		#nav ul.secondary li a.nav-sign-in
+		{
+			background: #98DDEC;
+		}
+
+		#nav ul.secondary li a.nav-join
+		{
+			background: #B1E589;
 		}
 
 			#nav li > ul
@@ -439,13 +450,13 @@
 
 	#banner
 	{
-		padding: 4em 0 3.5em 0;
+		padding: 2em 0 1.5em 0;
 	}
 	
 		#banner h2
 		{
 			font-size: 2.75em;
-			margin: 0 0 0.75em 0;
+			margin: .5em 0;
 		}
 		
 		#banner p
@@ -474,14 +485,19 @@
 
 	#footer
 	{
-		text-align: center;
 		padding: 8em 0 5em 0;
+		text-align: center;
 	}
 	
 		#footer h2.major
 		{
 			margin: 0 0 1em 0;
 		}		
+
+		#footer .box.features
+		{
+			text-align: left;
+		}
 
 /*********************************************************************************/
 /* Copyright                                                                     */
