company info added on contact page

--- a/personal-test-projects/Connect2Rep/css/style.css
+++ b/personal-test-projects/Connect2Rep/css/style.css
@@ -902,14 +902,14 @@ h3 i.service
 	margin: 0 auto;
 }
 
-.video-container iframe
-{
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	top: 0;
-	left: 0;
-}
+	.video-container iframe
+	{
+		position: absolute;
+		height: 100%;
+		width: 100%;
+		top: 0;
+		left: 0;
+	}
 
 .contact-form
 {
@@ -917,7 +917,23 @@ h3 i.service
 	margin: 0 auto;
 }
 
-.contact-form > *
+	.contact-form > *
+	{
+		margin: 10px 0;
+	}
+
+.address-box
 {
-	margin: 10px 0;
+	text-align: center;
 }
+
+	.address-box > *
+	{
+		margin-bottom: 0.5em;
+		font-size: 1.25em;
+	}
+
+	.address-box > h1
+	{
+		font-size: 2.5em;
+	}
