--- a/personal-test-projects/Connect2Rep/css/style-1000px.css
+++ b/personal-test-projects/Connect2Rep/css/style-1000px.css
@@ -45,7 +45,7 @@
 
 	#header
 	{
-		padding: 2em 0 1em 0;
+		padding: 2em 0 0px 0;
 	}
 
 /*********************************************************************************/
