--- a/personal-test-projects/Connect2Rep/css/style-desktop.css
+++ b/personal-test-projects/Connect2Rep/css/style-desktop.css
@@ -232,7 +232,7 @@
 		font-family: 'Open Sans Condensed', sans-serif;
 		font-weight: 700;
 		text-transform: uppercase;
-		padding: 2em 0 1em 0;
+		padding: 2em 0 0.15em 0;
 		background: #fff;
 		margin: 0 auto;
 	}
@@ -303,6 +303,30 @@
 			z-index: 1001;
 		}
 
+		#nav ul.primary
+		{
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 1002;
+		}
+
+			#nav ul.primary li a
+			{
+				background-position: 50%;
+				background-repeat: no-repeat;
+				background-size: 100%;
+				height: 100%;
+				width: 225px;
+				background-image: url(../images/connect2rep.png);
+				color: transparent;
+			}
+
+			#nav ul.primary li:hover a
+			{
+				background-color: rgba(229, 229, 229, 0.5);
+			}
+
 		#nav ul.secondary
 		{
 			position: absolute;
@@ -358,8 +382,8 @@
 				#nav li.active a,
 				#nav li.active span
 				{
-					background: #C1CAC5;
 					color: #fff;
+					background: #C1CAC5;
 				}
 
 			#nav li.current
