new portfolio added and minor design updated

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -207,6 +207,7 @@ section.success {
     max-width: 400px;
     max-height: 200px;
     overflow: hidden;
+    box-shadow: 0 0 20px 5px #E8E8E8;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
